force-app/main/default/objects/ProjectLineItem__c/fields/AmountPerRole__c.field-meta.xml
<CustomField>
    <fullName>AmountPerRole__c</fullName>
    <label>AmountPerRole</label>
    <summarizedField>TeamProgress__c.TotalWorkDaysAmount__c</summarizedField>
    <summaryForeignKey>TeamProgress__c.ProjectLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>