force-app/main/default/objects/ProjectLineItem__c/fields/HoursPendingToAssign__c.field-meta.xml
<CustomField>
    <fullName>HoursPendingToAssign__c</fullName>
    <formula>QuantityHours__c -  QuantityHoursAllocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HoursPendingToAssign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>