force-app/main/default/objects/ProjectLineItem__c/fields/ProjectAssigned__c.field-meta.xml
<CustomField>
    <fullName>ProjectAssigned__c</fullName>
    <label>ProjectAssigned</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>ProjectLineItems</relationshipLabel>
    <relationshipName>ProjectLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>