force-app/main/default/objects/ProjectLineItem__c/fields/QuantityHours__c.field-meta.xml
<CustomField>
    <fullName>QuantityHours__c</fullName>
    <label>QuantityHours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>