force-app/main/default/objects/ProjectLineItem__c/fields/QuantityHoursAllocated__c.field-meta.xml
<CustomField>
    <fullName>QuantityHoursAllocated__c</fullName>
    <label>QuantityHoursAllocated</label>
    <summarizedField>TeamProgress__c.QuantityHoursAllocated__c</summarizedField>
    <summaryForeignKey>TeamProgress__c.ProjectLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>