force-app/main/default/objects/ProjectLineItem__c/validationRules/CanNotModifyStatusInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotModifyStatusInProgress</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(ProjectAssigned__r.Status__c , &apos;In Progress&apos;) &amp;&amp; NOT(ISPICKVAL(ProjectAssigned__r.Status__c, &apos;Completed&apos;) )</errorConditionFormula>
    <errorMessage>You can not delete or add more hours or Roles to the project because it is in the Progress stage</errorMessage>
</ValidationRule>